test/Fail/LiteralTooBig.err
LiteralTooBig.agda:7.6-8: error: [LiteralTooBig]
Matching on natural number literals is done by expanding the
literal to the corresponding constructor pattern, so you probably
don't want to do it this way
when checking that the pattern 42 has type Nat
